# copilot-dev

./: .cursorrules  .env.example  .gitignore  .markdownlint.json  AGENTS.md  CLAUDE.md  COPILOT_AGENT_TUTORIAL.md  COPILOT_CUSTOMIZATION_SAMPLES.md  COURSE_PLAN_JAN_2026.md  COURSE_PLAN_JULY_2026.md  COURSE_PLAN_MAR_2026.md  COURSE_PLAN_MAY_2026.md  COURSE_PLAN_NOV_2025.md  COURSE_PLAN_SEPT_2025.md  LICENSE  README.md  SOLUTION_VERIFICATION.md  STRUCTURE.md  copilot-metrics.json  course-description.md  course-plan.md  fizzbuzz.js  github-copilot-news-fetcher.js  github-news-fetcher2.py  latest-github-news.md  notepad  oreilly-class-page.md  requirements.txt  settings.json  warner-copilot-july-2026.pptx
.claude/: settings.json
.devcontainer/: devcontainer.json
blackbeard-extension-main/: .gitignore  package.json
copilot-certification/: exam-notes-and-links.md  github-copilot-cert-exam-objectives.md
docs/: COPILOT_AGENT_TUTORIAL.md  COPILOT_CUSTOMIZATION_SAMPLES.md  copilot-metrics-report-sample.md  course-details.md  course-plan.md  latest-github-news.md  (+4 more)
src/: README.md  app.js  conftest.py  copilotTipsApp.test.js  copilot_tips_server.py  package-lock.json  package.json  pyproject.toml  pytest.ini  server.js  server.test.js  setup.ps1  setup.sh  start_inspector.py  test-app.js  test_async_functions.py  test_copilot_tips_server.py  test_edge_cases.py  test_integration.py  test_performance.py  test_prompts.py  test_utils.py  tip-lookup.js  tips.json
src/config/: env.ts
src/data/: copilot_tips.json
src/database/: connection.ts
src/public/: index.html
(+132 files in other folders)
