[project]
name = "copilot-tips-mcp-server"
version = "1.0.0"
description = "FastMCP server for GitHub Copilot tips and tricks - O'Reilly teaching example"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
copilot-tips-server = "copilot_tips_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
